--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@nutui/nutui": "^2.2.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.6.0"
